fix icons being inivisble on mobile

--- a/html/assets/css/page/indexPage.css
+++ b/html/assets/css/page/indexPage.css
@@ -204,6 +204,7 @@ form {
     }
 
     .infoBtn {
+        top: 20px;
         right: 50px;
     }
 
